<resources>
    <string name="app_name">Si2chipLocationClientApp</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="speed_label">Speed</string>
    <string name="last_update_time_label">Last location update time</string>

    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_updated_message">Location Updated</string>

    <string name="title">Si2chip Technologies Pvt. Ltd.</string>
    <string name="user_id">Enter User_ID</string>
    <string name="device_id">Enter Device_ID</string>

    <string name="Start_update_to_database">Start Update DB</string>

</resources>
